Disable coverage for integration tests again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -545,18 +545,14 @@ jobs:
       - run:
           command: |
             mv .riot .ddriot
-            riot list --hash-only 'integration-latest' | shuf | circleci tests split | xargs -n 1 -I {} ./scripts/ddtest riot -v run --pass-env -s {} $([[ << pipeline.parameters.coverage >> == false ]] && echo '--no-cov' )
-      - when:
-          condition:
-            << pipeline.parameters.coverage >>
-          steps:
-            - save_coverage
+            riot list --hash-only 'integration-latest' | shuf | circleci tests split | xargs -n 1 -I {} ./scripts/ddtest riot -v run --pass-env -s {}
 
   integration_testagent:
     <<: *machine_executor
     steps:
       - run_test:
           snapshot: true
+          store_coverage: false
           pattern: 'integration-snapshot'
 
   vendor:
