--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ commands:
     description: "Install riot"
     steps:
       # Make sure we install and run riot on Python 3
-      - run: pip3 install riot==0.17.1
+      - run: pip3 install git+https://github.com/DataDog/riot@gnufede/pin-virtualenv-20.20.0
 
   restore_tox_cache:
     description: "Restore .tox directory from previous runs for faster installs"
