ci(debugging): reduce exploration limits (#5600)
We reduce the capture limits in probe installed during exploration
testing to reduce the overhead introduced and allow test runs to
complete more quickly. The main objective of the exploration tests is to
validate the bytecode manipulations, so this does not affect the
usefulness of the test runs.

## Checklist

- [x] Change(s) are motivated and described in the PR description.
- [x] Testing strategy is described if automated tests are not included
in the PR.
- [x] Risk is outlined (performance impact, potential for breakage,
maintainability, etc).
- [x] Change is maintainable (easy to change, telemetry, documentation).
- [x] [Library release note
guidelines](https://ddtrace.readthedocs.io/en/stable/contributing.html#Release-Note-Guidelines)
are followed.
- [x] Documentation is included (in-code, generated user docs, [public
corp docs](https://github.com/DataDog/documentation/)).
- [x] PR description includes explicit acknowledgement/acceptance of the
performance implications of this PR as reported in the benchmarks PR
comment.

## Reviewer Checklist

- [x] Title is accurate.
- [x] No unnecessary changes are introduced.
- [x] Description motivates each change.
- [x] Avoids breaking
[API](https://ddtrace.readthedocs.io/en/stable/versioning.html#interfaces)
changes unless absolutely necessary.
- [x] Testing strategy adequately addresses listed risk(s).
- [x] Change is maintainable (easy to change, telemetry, documentation).
- [x] Release note makes sense to a user of the library.
- [x] Reviewer has explicitly acknowledged and discussed the performance
implications of this PR as reported in the benchmarks PR comment.

Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>
(cherry picked from commit 8b531c8e70ea7adb2efde0adce424b65ba2d8d37)

--- a/.github/workflows/test_frameworks.yml
+++ b/.github/workflows/test_frameworks.yml
@@ -55,23 +55,22 @@ jobs:
   django-testsuite-3_1:
     strategy:
       matrix:
-        expl_profiler: [0, 1]
-        expl_coverage: [0 ,1]
-        exclude:
-          - expl_profiler: 1
-            expl_coverage: 1
-          - expl_profiler: 0
+        include:
+          - suffix: DI profiler
+            expl_profiler: 1
             expl_coverage: 0
-          # Temporarily disabling line coverage to investigate cause of hangs
-          - expl_profiler: 0
+          - suffix: DI coverage
+            expl_profiler: 0
             expl_coverage: 1
     runs-on: ubuntu-20.04
+    name: Django 3.1 (with ${{ matrix.suffix }})
     env:
       DD_PROFILING_ENABLED: true
       DD_TESTING_RAISE: true
       DD_DEBUGGER_EXPL_ENCODE: 0  # Disabled to speed up
       DD_DEBUGGER_EXPL_PROFILER_ENABLED: ${{ matrix.expl_profiler }}
       DD_DEBUGGER_EXPL_COVERAGE_ENABLED: ${{ matrix.expl_coverage }}
+      DD_DEBUGGER_EXPL_CONSERVATIVE: 1
       PYTHONPATH: ../ddtrace/tests/debugging/exploration/:.
     defaults:
       run:
