--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   validate:
     name: Check requirements lockfiles
-    runs-on: ghcr.io/datadog/dd-trace-py/testrunner:latest
+    runs-on: ubuntu-latest
+    container: ghcr.io/datadog/dd-trace-py/testrunner:latest
     steps:
       - uses: actions/checkout@v3
         with:
