--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set python interpreters
-        run: pyenv shell 2.7.18 3.5.10 3.6.15 3.7.13 3.8.13 3.9.11 3.10.3 3.11.0
+        run: pyenv global 2.7.18 3.5.10 3.6.15 3.7.13 3.8.13 3.9.11 3.10.3 3.11.0
 
       - name: Install Dependencies
         run: pip install riot>=0.17.0
