--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -19,7 +19,7 @@ jobs:
         run: pyenv global 2.7.18 3.5.10 3.6.15 3.7.13 3.8.13 3.9.11 3.10.3 3.11.0
 
       - name: Install Dependencies
-        run: pip3 install --upgrade pip && pip3 install riot
+        run: $PYENV_ROOT/versions/3.10.3/bin/pip install --upgrade pip && $PYENV_ROOT/versions/3.10.3/bin/pip install riot
 
       - name: Ensure riot requirements lockfiles are in sync
-        run: scripts/compile-and-prune-test-requirements && pwd && ls && git diff --exit-code
+        run: alias riot="$PYENV_ROOT/versions/3.10.3/bin/riot" && scripts/compile-and-prune-test-requirements && pwd && ls && git diff --exit-code
