--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,13 +136,13 @@ services:
         volumes:
           - ddagent:/tmp/ddagent:rw
     testagent:
-        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+        image: williamconti549/dd-apm-test-agent:latest
         ports:
             - "127.0.0.1:9126:8126"
         volumes:
             - ./tests/snapshots:/snapshots
         environment:
-            - LOG_LEVEL=WARNING
+            - LOG_LEVEL=DEBUG
             - SNAPSHOT_DIR=/snapshots
             - SNAPSHOT_CI
     vertica:
