--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -22,4 +22,4 @@ jobs:
         run: $PYENV_ROOT/versions/3.10.3/bin/pip install --upgrade pip && $PYENV_ROOT/versions/3.10.3/bin/pip install riot
 
       - name: Ensure riot requirements lockfiles are in sync
-        run: scripts/compile-and-prune-test-requirements $PYENV_ROOT/versions/3.10.3/bin/riot && pwd && ls && git diff --exit-code
+        run: scripts/compile-and-prune-test-requirements $PYENV_ROOT/versions/3.10.3/bin/riot && ls -al
