--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -8,11 +8,14 @@ on:
 jobs:
   validate:
     name: Check requirements lockfiles
+    runs-on: ubuntu-latest
     container: ghcr.io/datadog/dd-trace-py/testrunner:latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - run: git init
 
       - name: Set python interpreters
         run: pyenv global 2.7.18 3.5.10 3.6.15 3.7.13 3.8.13 3.9.11 3.10.3 3.11.0
