--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -13,9 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 1
+          fetch-depth: 0
 
-      - run: git init
+      - name: Fixup git permissions
+        # https://github.com/actions/checkout/issues/766
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Set python interpreters
         run: pyenv global 2.7.18 3.5.10 3.6.15 3.7.13 3.8.13 3.9.11 3.10.3 3.11.0
