--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -28,5 +28,7 @@ jobs:
       - name: Generate riot locks
         run: scripts/compile-and-prune-test-requirements $PYENV_ROOT/versions/3.10.3/bin/riot
 
+      - run: rm -rf .riot/requirements/*.txt
+
       - name: Check git diff
-        run: whoami && ls -al && pwd && /usr/bin/git diff --exit-code
+        run: /usr/bin/git diff --exit-code
