--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -31,4 +31,4 @@ jobs:
       - run: rm -rf .riot/requirements/*.txt
 
       - name: Check git diff
-        run: if [ "$(/usr/bin/git diff --exit-code)" ]; then echo "Mismatches found between .riot/requirements/*.txt and riotfile.py. Run scripts/compile-and-prune-test-requirements and commit the result."; fi
+        run: if [ "$(/usr/bin/git diff --exit-code)" ]; then echo "Mismatches found between .riot/requirements/*.txt and riotfile.py. Run scripts/compile-and-prune-test-requirements and commit the result."; exit 1; fi
