--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -28,5 +28,7 @@ jobs:
       - name: Generate riot locks
         run: scripts/compile-and-prune-test-requirements $PYENV_ROOT/versions/3.10.3/bin/riot
 
+      - run: touch foo
+
       - name: Check git diff
-        run: if [ "$(/usr/bin/git diff --exit-code)" ]; then echo "Mismatches found between .riot/requirements/*.txt and riotfile.py. Run scripts/compile-and-prune-test-requirements and commit the result."; exit 1; fi
+        run: if [[ "$(git diff --exit-code)" || ! -z "$(git ls-files -o --exclude-standard)" ]]; then echo "Mismatches found between .riot/requirements/*.txt and riotfile.py. Run scripts/compile-and-prune-test-requirements and commit the result."; exit 1; fi
