--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -31,4 +31,4 @@ jobs:
       - run: touch foo
 
       - name: Check git diff
-        run: if [ "$(git diff --exit-code)" || ! -z "$(git ls-files -o --exclude-standard)" ]; then echo "Mismatches found between .riot/requirements/*.txt and riotfile.py. Run scripts/compile-and-prune-test-requirements and commit the result."; exit 1; fi
+        run: scripts/check-diff
