--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -29,4 +29,4 @@ jobs:
         run: scripts/compile-and-prune-test-requirements $PYENV_ROOT/versions/3.10.3/bin/riot
 
       - name: Check git diff
-        run: scripts/check-diff
+        run: scripts/check-diff 'Mismatches found between .riot/requirements/*.txt and riotfile.py. Run scripts/compile-and-prune-test-requirements and commit the result.'
